# eda

./: .gitignore  .ninja_log  CMakeLists.txt  README.md  build.ninja  eda.code-workspace
config/: config.yaml
eda/: main.cpp
eda/config/: config.cpp  config.hpp
eda/core/: config_parser.cpp  config_parser.h  eda_type_traits.h  errors.hpp  functools.hpp  sink.hpp  std.h
eda/etcd/: etcd_op.cpp  etcd_op.h  etcd_op.hpp
eda/tests/: test.yaml  test_utils.hpp  tests.cpp
eda/tests/yaml/: list.yaml  map.yaml  maplist.yaml
eda/vfs/: path.h  path.hpp  vfs.cpp  vfs.h  vfs.hpp
hack/: init_dataset.sh
